fixed menu position on selector to avoid thrash button overlapping

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -733,6 +733,11 @@
 		}        
 
         .gridster-item{
+        	&.fixedLeft {
+        		.showActionButtonHandler {
+        			left: 0 !important;
+        		}
+        	}
 			 md-card.md-knowage-theme md-card-title {
 			 	height:32px;
 			 	min-height: 32px;
